Prevent page from jumping when the page is long enough (fixes #15)

--- a/st/app.css
+++ b/st/app.css
@@ -2,6 +2,10 @@ html, body {
 	margin: 0;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	padding: 10px 0;
 	background: rgba(0,0,0,.03);
